--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@
 
 name: GMG-READS
 
-on: 
+on:
   push:
     branches: [ "main" ]
   pull_request:
@@ -30,4 +30,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file gmg_reads/pom.xml
 
-
+    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
