--- a/gmg_reads/pom.xml
+++ b/gmg_reads/pom.xml
@@ -13,6 +13,20 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <shutdown>kill</shutdown> <!-- Use it if required-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Dependência para o JUnit -->
         <dependency>
@@ -26,7 +40,7 @@
             <artifactId>mockito-core</artifactId>
             <version>3.12.4</version>
             <scope>test</scope>
-    </dependency>
+        </dependency>
         <!-- Outras dependências do seu projeto -->
     </dependencies>
 </project>
